--- a/templates/skoring.html
+++ b/templates/skoring.html
@@ -327,9 +327,11 @@
 
         <label for="tim_a">Nama Tim A</label>
         <select name="tim_a" id="tim_a" required></select>
+        <option value="">-- Pilih Tim --</option>
 
         <label for="tim_b">Nama Tim B</label>
         <select name="tim_b" id="tim_b" required></select>
+        <option value="">-- Pilih Tim --</option>
 
         <label for="pemenang">Nama Tim Pemenang</label>
         <select name="pemenang" id="pemenang" required>
