--- a/templates/skoring.html
+++ b/templates/skoring.html
@@ -349,9 +349,9 @@
     </div>
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Panitia HUT RI ke-80. Semua hak dilindungi.</p>
+    <p>&copy; 2025 Panitia HUT RI ke-80. Grand Batavia Essence</p>
     <p>Dirgahayu Indonesia ke-80! Merdeka!</p>
-        <p>Grand Batavia Cluster Essence</p>
+        <p>Created and Developed by OmDemand</p>
   </footer>
 
   <script>
