--- a/templates/home.html
+++ b/templates/home.html
@@ -288,9 +288,9 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Panitia HUT RI ke-80. Semua hak dilindungi.</p>
+    <p>&copy; 2025 Panitia HUT RI ke-80. Grand Batavia Essence</p>
     <p>Dirgahayu Indonesia ke-80! Merdeka!</p>
-    <p>Grand Batavia Cluster Essence</p>
+    <p>Created and Developed by OmDemand</p>
   </footer>
 </body>
 </html>
