--- a/templates/skoring.html
+++ b/templates/skoring.html
@@ -326,12 +326,12 @@
         </select>
 
         <label for="tim_a">Nama Tim A</label>
-        <select name="tim_a" id="tim_a" required></select>
-        <option value="">-- Pilih Tim --</option>
+        <select name="tim_a" id="tim_a" required>
+        <option value="">-- Pilih Tim --</option></select>
 
         <label for="tim_b">Nama Tim B</label>
-        <select name="tim_b" id="tim_b" required></select>
-        <option value="">-- Pilih Tim --</option>
+        <select name="tim_b" id="tim_b" required>
+        <option value="">-- Pilih Tim --</option></select>
 
         <label for="pemenang">Nama Tim Pemenang</label>
         <select name="pemenang" id="pemenang" required>
