add hasil route dan html

--- a/templates/home.html
+++ b/templates/home.html
@@ -266,26 +266,32 @@
   <div class="garis-merah-putih"></div>
 
   <!-- Konten Utama -->
-  <main class="container">
-    <h2>Lomba 17 Agustus 2025</h2>
-    <h2>Grand Batavia Cluster Essence</h2>
-    <div class="menu-container">
-      <a href="/lomba" class="menu-card">
-        <h3>Jenis Lomba</h3>
-        <p>Kelola daftar jenis lomba</p>
-      </a>
-      
-      <a href="/register" class="menu-card">
-        <h3>Registrasi Peserta</h3>
-        <p>Daftarkan peserta lomba</p>
-      </a>
-      
-      <a href="/skoring" class="menu-card">
-        <h3>Skoring Lomba</h3>
-        <p>Input hasil penilaian lomba</p>
-      </a>
-    </div>
-  </main>
+<main class="container">
+  <h2>Lomba 17 Agustus 2025</h2>
+  <h2>Grand Batavia Cluster Essence</h2>
+  <div class="menu-container">
+    <a href="/lomba" class="menu-card">
+      <h3>Jenis Lomba</h3>
+      <p>Kelola daftar jenis lomba</p>
+    </a>
+
+    <a href="/register" class="menu-card">
+      <h3>Registrasi Peserta</h3>
+      <p>Daftarkan peserta lomba</p>
+    </a>
+
+    <a href="/skoring" class="menu-card">
+      <h3>Skoring Lomba</h3>
+      <p>Input hasil penilaian lomba</p>
+    </a>
+
+    <a href="/hasil" class="menu-card">
+      <h3>Hasil Skoring</h3>
+      <p>Lihat hasil pertandingan dan pemenang</p>
+    </a>
+  </div>
+</main>
+
 
   <!-- Footer -->
   <footer class="footer">
